[package]
name = "dinglebit-terminal"
version = "0.1.2"
authors = ["Joshua Marsh (icub3d) <joshua@themarshians.com>"]
edition = "2018"
description = "utilities for interacting with a terminal"
repository = "https://github.com/dinglebit/terminal.rs"
homepage = "https://www.dinglebit.com/"
readme = "README.md"
categories = ["command-line-interface"]

[dependencies]
