[package]
name = "dinglebit-terminal"
version = "1.0.0"
authors = ["Joshua Marsh (icub3d) <joshua@themarshians.com>"]
edition = "2018"
description = "utilities for interacting with a terminal"
repository = "https://git.themarshians.com/dinglebit/terminal.rs"
homepage = "https://www.dinglebit.com/"
readme = "README.md"
categories = ["command-line-interface"]
license = "MIT"
documentation = "https://docs.rs/dinglebit-terminal"

[dependencies]
